feat: Add analyics chart. Update analytics logic. Update frontend deps
